--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -52,5 +52,8 @@
         </p>
       </div>
     </div>
+    <div class="footer_bottom">
+      <h1>Copyright 2022 © SanKir Technologies Pvt Ltd</h1>
+    </div>
   </div>
 </footer>
