--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,8 +1,8 @@
 <nav>
-  <div class="container-fluid">
+  <div class="container">
     <div class="heading">
       <h1><a href="">Sankir Technologies</a></h1>
-      <h2>Accelerating <span> Data Engineering </span> Solution on Cloud</h2>
+
       <ul>
         <li>
           <a href="#Architecture"
