--- a/src/veriable.scss
+++ b/src/veriable.scss
@@ -1,10 +1,3 @@
-$backgroundbox-color: #1f485a;
-$backgroundcolor: #f0faff;
-$background-color-second: #0b1419;
-
-$primary-text-color: #2c76dc;
-$nav-background: #ffffff;
-$white-text-color: rgb(0, 0, 0);
-$backcolor: #000;
-$li-color: #485c77;
-$primary-background-color: #002c96;
+$primary-background-color: #262f75;
+$primary-color-white: #fff;
+$footer-color: #050a30;
