--- a/src/mixin.scss
+++ b/src/mixin.scss
@@ -18,15 +18,28 @@
 }
 
 @mixin head {
-  padding-bottom: 4rem;
+  padding-bottom: 2rem;
   h1 {
     font-family: "Poppins", sans-serif;
     margin-top: 0;
     margin-bottom: 0;
     font-weight: 400;
-    color: #3d3d3d;
+    color: $primary-background-color;
     letter-spacing: 0;
     text-align: center;
+  }
+}
+@mixin card_head {
+  background-color: #000c66;
+  padding: 1rem;
+  box-shadow: 0 0 10px rgb(0 0 0 / 10%);
+
+  h1 {
+    color: $primary-color-white;
+    font-size: 1.6rem;
+    font-weight: 500;
+    text-align: center;
+    letter-spacing: 1px;
   }
 }
 
@@ -38,5 +51,23 @@
     font-size: 1.1rem;
     color: $li-color;
     @include boolet;
+  }
+}
+
+@mixin card_list {
+  padding-left: 2rem;
+  li {
+    font-size: 0.9rem;
+    list-style: none;
+    line-height: 1.5rem;
+    text-align: start;
+    &::before {
+      content: "\2022";
+      color: $primary-color-white;
+      font-weight: bold;
+      display: inline-block;
+      width: 1em;
+      margin-left: -1em;
+    }
   }
 }
