--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,12 +4,13 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Poppins", sans-serif;
+  // font-family: "Poppins", sans-serif;
+  font-family: "lato", sans-serif;
 }
 body {
   margin: 0;
   color: rgb(0, 0, 0);
-  background-color: #262f75;
+  background-color: $primary-background-color;
 }
 
 h1,
