--- a/src/app/why/why.component.scss
+++ b/src/app/why/why.component.scss
@@ -1,28 +1,28 @@
-@import "../../mixin.scss";
-@import "../../veriable.scss";
-.why_sankir {
-  padding: 3rem 5rem 5rem;
-  .head {
-    @include head;
-  }
-  .body_layout {
-    padding-top: 6rem;
-    .data_solve {
-      text-align: center;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 5rem 0 0;
-      column-gap: 1rem;
+// @import "../../mixin.scss";
+// @import "../../veriable.scss";
+// .why_sankir {
+//   padding: 3rem 5rem 5rem;
+//   .head {
+//     @include head;
+//   }
+//   .body_layout {
+//     padding-top: 6rem;
+//     .data_solve {
+//       text-align: center;
+//       display: flex;
+//       align-items: center;
+//       justify-content: center;
+//       padding: 5rem 0 0;
+//       column-gap: 1rem;
 
-      h4 {
-        font-size: 1.5rem;
-        color: $primary-text-color;
-      }
-    }
-    ul {
-      padding-left: 5rem;
-      @include list;
-    }
-  }
-}
+//       h4 {
+//         font-size: 1.5rem;
+//         color: $primary-color-white;
+//       }
+//     }
+//     ul {
+//       padding-left: 5rem;
+//       @include list;
+//     }
+//   }
+// }
