--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -4,6 +4,7 @@
       <h1><a href="">Sankir Technologies</a></h1>
 
       <ul>
+        <li><a href="about">About</a></li>
         <li>
           <a href="#Architecture"
             >Consultancy <i class="fa fa-caret-down"></i
@@ -13,8 +14,6 @@
             <li><a href="#data_engineer">Data Engineering Tools</a></li>
           </ul>
         </li>
-
-        <li><a href="#engagement_partner">Business Opportunities</a></li>
         <li><a routerLink="why">WHY sankir</a></li>
         <li><a routerLink="poc">PoC</a></li>
       </ul>
