--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,16 +1,27 @@
+.banner {
+  background: linear-gradient(
+      90deg,
+      rgba(2, 0, 36, 1) 0%,
+      rgba(9, 9, 121, 0.541) 35%,
+      rgba(2, 0, 36, 0.521) 100%
+    ),
+    url("https://img.freepik.com/free-vector/vector-infographic-background-with-cartoon-interior-future-data-center-room-with-server-hardware-hologram-processor-concept-bigdata-technology-cloud-information-base_107791-3567.jpg?w=1380&t=st=1662574978~exp=1662575578~hmac=c84360172e3b658966b8ac626ff48bf4f0a33187451f5aa9827205498905594b");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 10rem 0;
+  h1 {
+    font-size: 5rem;
+    font-weight: 800;
+    color: #fff;
+    text-align: center;
+  }
+}
+
 .about {
   background-color: #fff;
-  .head {
-    h1 {
-      font-size: 3rem;
-      font-weight: 900;
-      text-align: center;
-      padding: 3rem 0;
-      color: #fff;
-      letter-spacing: 0.5px;
-      background: linear-gradient(120deg, #0984e3 0%, #003bb1 100%);
-    }
-  }
+  padding: 5rem 0;
+
   .body_layout {
     padding: 2rem 0;
     .about_wrap {
@@ -30,6 +41,87 @@
         padding-left: 3rem;
         li {
           list-style: none;
+        }
+      }
+    }
+  }
+}
+
+.about_body {
+  background-color: rgb(215, 238, 252);
+
+  padding: 5rem 0;
+
+  .about_info {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 5rem;
+
+    .kiran_about {
+      box-shadow: 0 0 10px rgb(0 0 0 / 10%);
+      border-radius: 10px;
+      background-color: #fff;
+      .image {
+        background-color: #003bb1ba;
+        padding-bottom: 2rem;
+        border-radius: 10px 10px 0 0;
+        img {
+          position: relative;
+          top: 93px;
+          left: 38px;
+          border-radius: 50%;
+          border: 5px solid #7ea1f3;
+          width: 150px;
+        }
+      }
+      .content {
+        padding: 2rem;
+      }
+      h1 {
+        font-size: 1.5rem;
+        padding-top: 3rem;
+        padding-bottom: 0.5rem;
+
+        font-weight: 800;
+        letter-spacing: 1px;
+      }
+      h3 {
+        padding-bottom: 1rem;
+        font-size: 1.4rem;
+        font-weight: 500;
+        letter-spacing: 0.5px;
+      }
+      ul {
+        li {
+          list-style: none;
+          font-size: 0.9rem;
+          line-height: 1.5rem;
+        }
+      }
+      .profile_link {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+      }
+      .social_media {
+        display: flex;
+        align-items: center;
+        a {
+          font-size: 1rem;
+          color: #000;
+          font-weight: 600;
+
+          i {
+            margin-right: 0.8rem;
+            font-size: 1.7rem;
+          }
+          .fa-linkedin {
+            background-color: #003bb1;
+            font-size: 1.2rem;
+            padding: 0.2rem 0.3rem;
+            color: #fff;
+            border-radius: 2px;
+          }
         }
       }
     }
