--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,76 +4,78 @@
   </div>
 </section>
 
-<section class="about">
+<section class="about_body">
   <div class="container">
-    <div class="body_layout">
-      <div class="about_wrap" *ngFor="let about of aboutsList">
-        <h1>{{ about.parentList }}</h1>
-        <h3>{{ about.samiParentList }}</h3>
-        <ul *ngFor="let child of about.childLists">
-          <li>
-            {{ child.childList }}
-          </li>
-        </ul>
+    <div class="about_info">
+      <div class="image">
+        <img
+          src="https://www.sankir.com/wp-content/uploads/2022/02/kiran_3c.jpg"
+          alt=""
+        />
+      </div>
+      <div class="kiran_about">
+        <div class="content" *ngFor="let info of selfInfo">
+          <div class="profile_link">
+            <h1>{{ info.name }}</h1>
+          </div>
+          <h3>{{ info.experince }}</h3>
+          <ul class="subEx" *ngFor="let sub of info.subExperinces">
+            <li>{{ sub.subExperince }}</li>
+            <ul class="nastEx" *ngFor="let nast of sub.natedEx">
+              <li>{{ nast.name }}</li>
+            </ul>
+          </ul>
+        </div>
+        <div class="social_media">
+          <a href="https://github.com/kiranhm1972">
+            <i class="fa fa-github"></i>https://github.com/kiranhm1972</a
+          >
+
+          <a href="https://www.linkedin.com/in/hiremath-kiran/"
+            ><i class="fa fa-linkedin"> </i>
+            https://www.linkedin.com/in/hiremath-kiran/</a
+          >
+        </div>
       </div>
     </div>
   </div>
 </section>
-<div class="about_body">
+
+<section class="about_body sanjay">
   <div class="container">
     <div class="about_info">
-      <div class="kiran_about">
-        <div class="image">
-          <img
-            src="https://www.sankir.com/wp-content/uploads/2022/02/kiran_3c.jpg"
-            alt=""
-          />
-        </div>
-        <div class="content" *ngFor="let info of selfInfo">
-          <div class="profile_link">
-            <h1>{{ info.name }}</h1>
-            <div class="social_media">
-              <a href="https://github.com/kiranhm1972">
-                <i class="fa fa-github"></i
-              ></a>
-
-              <a href="https://www.linkedin.com/in/hiremath-kiran/"
-                ><i class="fa fa-linkedin"></i>
-              </a>
-            </div>
-          </div>
-          <h3>{{ info.experince }}</h3>
-          <ul *ngFor="let sub of info.subExperinces">
-            <li>{{ sub.subExperince }}</li>
-          </ul>
-        </div>
+      <div class="image">
+        <img
+          src="https://www.sankir.com/wp-content/uploads/2022/02/sanjay_4d-150x150.png"
+          alt=""
+        />
       </div>
-      <div class="kiran_about">
-        <div class="image">
-          <img
-            src="https://www.sankir.com/wp-content/uploads/2022/02/sanjay_4d-150x150.png"
-            alt=""
-          />
-        </div>
-        <div class="content" *ngFor="let info of sanjayselfInfo">
+      <div class="sanjay_about">
+        <div class="content" *ngFor="let infos of sanjayselfInfo">
           <div class="profile_link">
-            <h1>{{ info.name }}</h1>
-            <div class="social_media">
-              <a href="https://github.com/kiranhm1972">
-                <i class="fa fa-github"></i
-              ></a>
-
-              <a href="https://www.linkedin.com/in/hiremath-kiran/"
-                ><i class="fa fa-linkedin"></i>
-              </a>
-            </div>
+            <h1>{{ infos.name }}</h1>
           </div>
-          <h3>{{ info.experince }}</h3>
-          <ul *ngFor="let sub of info.subExperinces">
+          <h3>{{ infos.experince }}</h3>
+          <ul class="subEx" *ngFor="let sub of infos.subExperinces">
             <li>{{ sub.subExperince }}</li>
+            <ul class="nastEx" *ngFor="let nast of sub.natedEx">
+              <li>{{ nast.name }}</li>
+            </ul>
           </ul>
+        </div>
+        <div class="social_media">
+          <a href="https://github.com/sbheemas" target="_blank">
+            <i class="fa fa-github"></i>https://github.com/sbheemas</a
+          >
+
+          <a
+            href="https://www.linkedin.com/in/sanjaybheemasenarao/"
+            target="_blank"
+            ><i class="fa fa-linkedin"> </i>
+            https://www.linkedin.com/in/sanjaybheemasenarao/</a
+          >
         </div>
       </div>
     </div>
   </div>
-</div>
+</section>
