--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -18,112 +18,511 @@
   }
 }
 
-.about {
+.about_body {
   background-color: #fff;
-  padding: 5rem 0;
+  padding: 3rem 0;
 
-  .body_layout {
-    padding: 2rem 0;
-    .about_wrap {
-      h1 {
-        font-size: 1rem;
-        font-style: italic;
-        padding-bottom: 1rem;
-        font-weight: 800;
-        letter-spacing: 0.5px;
+  .about_info {
+    display: flex;
+    justify-content: space-around;
+
+    .kiran_about {
+      .content {
+        padding-top: 3rem;
+        h1 {
+          font-size: 1.5rem;
+          font-weight: 800;
+          padding-bottom: 0.5rem;
+          color: rgb(33, 77, 119);
+        }
+        h3 {
+          font-size: 1.5rem;
+          font-weight: 400;
+          padding-bottom: 1.2rem;
+        }
+        ul {
+          padding-left: 2rem;
+          li {
+            list-style: none;
+            text-align: start;
+            font-size: 1.2rem;
+            font-weight: 600;
+            letter-spacing: 0.5px;
+            color: rgb(33, 77, 119);
+            padding-bottom: 0.5rem;
+          }
+          ul {
+            li {
+              font-size: 1rem;
+              font-weight: 500;
+              color: #000;
+              letter-spacing: 0;
+              padding-bottom: 0;
+            }
+          }
+        }
       }
-      h3 {
-        font-size: 1rem;
-        font-style: normal;
-        padding-bottom: 2rem;
-      }
-      ul {
-        padding-left: 3rem;
-        li {
-          list-style: none;
+      .social_media {
+        padding-top: 2rem;
+        a {
+          font-size: 1.3rem;
+          margin: 1rem;
+          color: #000;
+          font-weight: 500;
+          i {
+            margin-right: 1rem;
+            font-size: 1.5rem;
+          }
+          .fa-linkedin {
+            background-color: rgb(19, 42, 170);
+            padding: 0.4rem 0.5rem;
+            border-radius: 0.12225rem;
+            color: #fff;
+          }
+          .fa-github {
+            background-color: rgb(22, 22, 22);
+            color: #fff;
+            padding: 0.3rem 0.4rem;
+            border-radius: 0.12225rem;
+          }
         }
       }
     }
   }
 }
-
 .about_body {
-  background-color: rgb(215, 238, 252);
-
-  padding: 5rem 0;
-
+  background-color: #fff;
+  padding: 3rem 0;
   .about_info {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 5rem;
+    display: flex;
+    justify-content: space-evenly;
 
-    .kiran_about {
-      box-shadow: 0 0 10px rgb(0 0 0 / 10%);
-      border-radius: 10px;
-      background-color: #fff;
-      .image {
-        background-color: #003bb1ba;
-        padding-bottom: 2rem;
-        border-radius: 10px 10px 0 0;
-        img {
-          position: relative;
-          top: 93px;
-          left: 38px;
-          border-radius: 50%;
-          border: 5px solid #7ea1f3;
-          width: 150px;
-        }
-      }
+    .sanjay_about {
+      width: 80%;
       .content {
-        padding: 2rem;
-      }
-      h1 {
-        font-size: 1.5rem;
         padding-top: 3rem;
-        padding-bottom: 0.5rem;
-
-        font-weight: 800;
-        letter-spacing: 1px;
-      }
-      h3 {
-        padding-bottom: 1rem;
-        font-size: 1.4rem;
-        font-weight: 500;
-        letter-spacing: 0.5px;
-      }
-      ul {
-        li {
-          list-style: none;
-          font-size: 0.9rem;
-          line-height: 1.5rem;
+        h1 {
+          font-size: 1.5rem;
+          font-weight: 800;
+          padding-bottom: 0.5rem;
+          color: rgb(33, 77, 119);
         }
-      }
-      .profile_link {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+        h3 {
+          font-size: 1.5rem;
+          font-weight: 400;
+          padding-bottom: 1.2rem;
+        }
+        ul {
+          padding-left: 2rem;
+          li {
+            list-style: none;
+            text-align: start;
+            font-size: 1.1rem;
+            font-weight: 600;
+            letter-spacing: 0.05px;
+            color: rgb(33, 77, 119);
+            padding-bottom: 0.3rem;
+          }
+          ul {
+            li {
+              font-size: 1rem;
+              font-weight: 500;
+              color: #000;
+              letter-spacing: 0;
+              padding-bottom: 0;
+            }
+          }
+        }
       }
       .social_media {
-        display: flex;
-        align-items: center;
+        padding-top: 2rem;
         a {
-          font-size: 1rem;
+          font-size: 1.3rem;
+          margin: 1rem;
           color: #000;
-          font-weight: 600;
-
+          font-weight: 500;
           i {
-            margin-right: 0.8rem;
-            font-size: 1.7rem;
+            margin-right: 1rem;
+            font-size: 1.5rem;
           }
           .fa-linkedin {
-            background-color: #003bb1;
-            font-size: 1.2rem;
-            padding: 0.2rem 0.3rem;
+            background-color: rgb(19, 42, 170);
+            padding: 0.4rem 0.5rem;
+            border-radius: 0.12225rem;
             color: #fff;
-            border-radius: 2px;
+          }
+          .fa-github {
+            background-color: rgb(22, 22, 22);
+            color: #fff;
+            padding: 0.3rem 0.4rem;
+            border-radius: 0.12225rem;
           }
         }
       }
     }
+  }
+}
+.sanjay {
+  background-color: rgba(255, 255, 255, 0.863);
+}
+
+@media screen and (max-width: 600px) {
+  .banner {
+    background: linear-gradient(
+        90deg,
+        rgba(2, 0, 36, 1) 0%,
+        rgba(9, 9, 121, 0.541) 35%,
+        rgba(2, 0, 36, 0.521) 100%
+      ),
+      url("https://img.freepik.com/free-vector/vector-infographic-background-with-cartoon-interior-future-data-center-room-with-server-hardware-hologram-processor-concept-bigdata-technology-cloud-information-base_107791-3567.jpg?w=1380&t=st=1662574978~exp=1662575578~hmac=c84360172e3b658966b8ac626ff48bf4f0a33187451f5aa9827205498905594b");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 10rem 0;
+    h1 {
+      font-size: 5rem;
+      font-weight: 800;
+      color: #fff;
+      text-align: center;
+    }
+  }
+
+  .about_body {
+    background-color: #fff;
+    padding: 3rem 0;
+
+    .about_info {
+      display: flex;
+      justify-content: space-around;
+      .image {
+        text-align: center;
+      }
+      .kiran_about {
+        .content {
+          padding-top: 3rem;
+          h1 {
+            font-size: 1.5rem;
+            font-weight: 800;
+            padding-bottom: 0.5rem;
+            color: rgb(33, 77, 119);
+            text-align: center;
+          }
+          h3 {
+            font-size: 1.5rem;
+            font-weight: 400;
+            padding-bottom: 1.2rem;
+            text-align: center;
+          }
+          ul {
+            padding-left: 2rem;
+            li {
+              list-style: none;
+              text-align: start;
+              font-size: 1.2rem;
+              font-weight: 600;
+              letter-spacing: 0.5px;
+              color: rgb(33, 77, 119);
+              padding-bottom: 0.5rem;
+            }
+            ul {
+              li {
+                font-size: 1rem;
+                font-weight: 500;
+                color: #000;
+                letter-spacing: 0;
+                padding-bottom: 0;
+              }
+            }
+          }
+        }
+        .social_media {
+          padding-top: 2rem;
+          a {
+            font-size: 1rem;
+            margin: 1rem;
+            color: #000;
+            font-weight: 500;
+            display: block;
+            i {
+              margin-right: 0.5rem;
+              font-size: 1rem;
+            }
+            .fa-linkedin {
+              background-color: rgb(19, 42, 170);
+              padding: 0.4rem 0.5rem;
+              border-radius: 0.12225rem;
+              color: #fff;
+            }
+            .fa-github {
+              background-color: rgb(22, 22, 22);
+              color: #fff;
+              padding: 0.3rem 0.4rem;
+              border-radius: 0.12225rem;
+            }
+          }
+        }
+      }
+    }
+  }
+  .about_body {
+    background-color: #fff;
+    padding: 3rem 0;
+    .about_info {
+      display: flex;
+      justify-content: space-evenly;
+      flex-direction: column;
+      .image {
+        text-align: center;
+      }
+      .sanjay_about {
+        width: 100%;
+        .content {
+          padding-top: 3rem;
+          h1 {
+            font-size: 1.5rem;
+            font-weight: 800;
+            padding-bottom: 0.5rem;
+            color: rgb(33, 77, 119);
+            text-align: center;
+          }
+          h3 {
+            font-size: 1.5rem;
+            font-weight: 400;
+            padding-bottom: 1.2rem;
+            text-align: center;
+          }
+          ul {
+            padding-left: 2rem;
+            li {
+              list-style: none;
+              text-align: start;
+              font-size: 1.1rem;
+              font-weight: 600;
+              letter-spacing: 0.05px;
+              color: rgb(33, 77, 119);
+              padding-bottom: 0.3rem;
+            }
+            ul {
+              li {
+                font-size: 1rem;
+                font-weight: 500;
+                color: #000;
+                letter-spacing: 0;
+                padding-bottom: 0;
+              }
+            }
+          }
+        }
+        .social_media {
+          padding-top: 2rem;
+          a {
+            font-size: 1rem;
+            margin: 1rem;
+            color: #000;
+            font-weight: 500;
+            display: block;
+            i {
+              margin-right: 0.5rem;
+              font-size: 1rem;
+            }
+            .fa-linkedin {
+              background-color: rgb(19, 42, 170);
+              padding: 0.4rem 0.5rem;
+              border-radius: 0.12225rem;
+              color: #fff;
+            }
+            .fa-github {
+              background-color: rgb(22, 22, 22);
+              color: #fff;
+              padding: 0.3rem 0.4rem;
+              border-radius: 0.12225rem;
+            }
+          }
+        }
+      }
+    }
+  }
+  .sanjay {
+    background-color: rgba(255, 255, 255, 0.863);
+  }
+}
+@media screen and (max-width: 424px) {
+  .banner {
+    background: linear-gradient(
+        90deg,
+        rgba(2, 0, 36, 1) 0%,
+        rgba(9, 9, 121, 0.541) 35%,
+        rgba(2, 0, 36, 0.521) 100%
+      ),
+      url("https://img.freepik.com/free-vector/vector-infographic-background-with-cartoon-interior-future-data-center-room-with-server-hardware-hologram-processor-concept-bigdata-technology-cloud-information-base_107791-3567.jpg?w=1380&t=st=1662574978~exp=1662575578~hmac=c84360172e3b658966b8ac626ff48bf4f0a33187451f5aa9827205498905594b");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 5rem 0;
+    h1 {
+      font-size: 3rem;
+      font-weight: 800;
+      color: #fff;
+      text-align: center;
+    }
+  }
+
+  .about_body {
+    background-color: #fff;
+    padding: 2rem 0;
+
+    .about_info {
+      display: flex;
+      justify-content: space-around;
+      .image {
+        text-align: center;
+      }
+      .kiran_about {
+        .content {
+          padding-top: 3rem;
+          h1 {
+            font-size: 1rem;
+            font-weight: 800;
+            padding-bottom: 0.5rem;
+            color: rgb(33, 77, 119);
+            text-align: center;
+          }
+          h3 {
+            font-size: 1rem;
+            font-weight: 400;
+            padding-bottom: 1.2rem;
+            text-align: center;
+          }
+          ul {
+            padding-left: 2rem;
+            li {
+              list-style: none;
+              text-align: start;
+              font-size: 0.8rem;
+              font-weight: 600;
+              letter-spacing: 0px;
+              color: rgb(33, 77, 119);
+              padding-bottom: 0.5rem;
+            }
+            ul {
+              li {
+                font-size: 0.7rem;
+                font-weight: 500;
+                color: #000;
+                letter-spacing: 0;
+                padding-bottom: 0;
+              }
+            }
+          }
+        }
+        .social_media {
+          padding-top: 1rem;
+          a {
+            font-size: 0.6rem;
+            margin: 1rem;
+            color: #000;
+            font-weight: 500;
+            display: block;
+            i {
+              margin-right: 0.5rem;
+              font-size: 1rem;
+            }
+            .fa-linkedin {
+              background-color: rgb(19, 42, 170);
+              padding: 0.2rem 0.3rem;
+              border-radius: 0.12225rem;
+              color: #fff;
+            }
+            .fa-github {
+              background-color: rgb(22, 22, 22);
+              color: #fff;
+              padding: 0.2rem 0.3rem;
+              border-radius: 0.12225rem;
+            }
+          }
+        }
+      }
+    }
+  }
+  .about_body {
+    background-color: #fff;
+    padding: 3rem 0;
+    .about_info {
+      display: flex;
+      justify-content: space-evenly;
+      flex-direction: column;
+      .image {
+        text-align: center;
+      }
+      .sanjay_about {
+        width: 100%;
+        .content {
+          padding-top: 3rem;
+          h1 {
+            font-size: 1rem;
+            font-weight: 800;
+            padding-bottom: 0.5rem;
+            color: rgb(33, 77, 119);
+            text-align: center;
+          }
+          h3 {
+            font-size: 1rem;
+            font-weight: 400;
+            padding-bottom: 1.2rem;
+            text-align: center;
+          }
+          ul {
+            padding-left: 2rem;
+            li {
+              list-style: none;
+              text-align: start;
+              font-size: 0.8rem;
+              font-weight: 600;
+              letter-spacing: 0px;
+              color: rgb(33, 77, 119);
+              padding-bottom: 0.5rem;
+            }
+            ul {
+              li {
+                font-size: 0.7rem;
+                font-weight: 500;
+                color: #000;
+                letter-spacing: 0;
+                padding-bottom: 0;
+              }
+            }
+          }
+        }
+        .social_media {
+          padding-top: 1rem;
+          a {
+            font-size: 0.6rem;
+            margin: 1rem;
+            color: #000;
+            font-weight: 500;
+            display: block;
+            i {
+              margin-right: 0.5rem;
+              font-size: 1rem;
+            }
+            .fa-linkedin {
+              background-color: rgb(19, 42, 170);
+              padding: 0.2rem 0.3rem;
+              border-radius: 0.12225rem;
+              color: #fff;
+            }
+            .fa-github {
+              background-color: rgb(22, 22, 22);
+              color: #fff;
+              padding: 0.2rem 0.3rem;
+              border-radius: 0.12225rem;
+            }
+          }
+        }
+      }
+    }
+  }
+  .sanjay {
+    background-color: rgba(255, 255, 255, 0.863);
   }
 }
