--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -55,3 +55,60 @@ footer {
     }
   }
 }
+@media screen and (max-width: 600px) {
+  footer {
+    padding: 5rem 0 3rem;
+    background-color: $footer-color;
+    color: #fff;
+    .footer_body {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      align-items: flex-start;
+      justify-content: center;
+      justify-items: center;
+      .items {
+        h1 {
+          font-size: 1.5rem;
+          padding-bottom: 1rem;
+          color: #00d8f5;
+        }
+        p {
+          font-size: 1rem;
+          line-height: 2rem;
+          color: #cdf8fd;
+        }
+        ul {
+          li {
+            list-style: none;
+            a {
+              font-size: 1rem;
+              line-height: 2rem;
+              color: #cdf8fd;
+            }
+          }
+        }
+        .social_media {
+          padding-top: 1rem;
+          li {
+            display: inline;
+            padding-right: 1rem;
+            a {
+              font-size: 1.2rem;
+              color: #00d8f5;
+            }
+          }
+        }
+      }
+    }
+    .footer_bottom {
+      text-align: center;
+      margin-top: 3rem;
+      padding-top: 2rem;
+      border-top: 1px solid rgba(255, 255, 255, 0.473);
+      h1 {
+        font-size: 1rem;
+        color: rgba(255, 255, 255, 0.39);
+      }
+    }
+  }
+}
