--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -34,7 +34,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <div class="carousel-caption d-none d-md-block">
+      <div class="carousel-caption">
         <div class="info">
           <div class="pra">
             <h5>Expertise in Data Engineering on Cloud</h5>
@@ -54,7 +54,7 @@
     </div>
 
     <div class="carousel-item">
-      <div class="carousel-caption d-none d-md-block">
+      <div class="carousel-caption">
         <div class="info">
           <h5>Engagement Partner for Business Opportunities</h5>
 
@@ -66,7 +66,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <div class="carousel-caption d-none d-md-block">
+      <div class="carousel-caption">
         <div class="info">
           <div class="wrap">
             <h5>Why Sankir ?</h5>
@@ -93,7 +93,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <div class="carousel-caption d-none d-md-block">
+      <div class="carousel-caption">
         <div class="info">
           <h5>Let SanKir own your Data Problems</h5>
 
