--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,21 +1,48 @@
-<nav>
+<nav class="navbar navbar-expand-lg" [class.header_change]="header_variable">
   <div class="container">
-    <div class="heading">
-      <h1><a href="">Sankir Technologies</a></h1>
+    <a class="navbar-brand" href="#">Sankir Technologies</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-      <ul>
-        <li><a href="about">About</a></li>
-        <li>
-          <a href="#Architecture"
-            >Consultancy <i class="fa fa-caret-down"></i
-          ></a>
-          <ul>
-            <li><a href="#cloud_service">Cloud Services</a></li>
-            <li><a href="#data_engineer">Data Engineering Tools</a></li>
+    <div class="collapse navbar-collapse heading" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#cloud_service"
+            id="navbarDropdownMenuLink"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Consultancy
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <li>
+              <a class="dropdown-item" href="#cloud_service">Cloud Services</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="#data_engineer"
+                >Data Engineering Tools</a
+              >
+            </li>
           </ul>
         </li>
-        <li><a routerLink="why">WHY sankir</a></li>
-        <li><a routerLink="poc">PoC</a></li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="poc">PoC</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="about">About</a>
+        </li>
       </ul>
     </div>
   </div>
