--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -5,48 +5,44 @@ nav {
   background-color: $primary-background-color;
   position: relative;
   z-index: 2;
-  .heading {
-    display: flex;
-    justify-content: space-between;
-    padding: 2rem 0;
-    align-items: center;
 
-    h1 {
-      a {
-        color: #fff;
-        padding: 0.2rem 1rem;
-        font-size: 1.8rem;
-      }
-    }
-    h2 {
-      color: #fff;
-      font-size: 1.6rem;
-      span {
-        color: #a8d457;
-      }
-    }
-    ul {
-      li {
+  .navbar-brand {
+    color: #fff;
+    padding: 0.2rem 1rem;
+    font-size: 1.8rem;
+  }
+  .navbar-toggler {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+    --bs-navbar-toggler-border-color: rgba(0, 0, 0, 0);
+    --bs-navbar-toggler-focus-width: 0;
+    --bs-navbar-toggler-icon-bg: none;
+    width: 1.5em;
+    height: 1.5em;
+    vertical-align: middle;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
+  }
+  .collapse {
+    justify-content: flex-end;
+    background-color: transparent;
+    .navbar-nav {
+      .nav-item {
         list-style: none;
         display: inline;
         padding: 1rem;
         position: relative;
         text-decoration: none;
-        transition-duration: 0.5s;
-        a {
-          color: #fff;
+
+        .nav-link {
+          color: rgb(255, 255, 255);
           font-size: 1.1rem;
           font-weight: 500;
         }
         ul {
-          background: $primary-color-white;
-          visibility: hidden;
-          opacity: 0;
+          background: rgb(49, 65, 202);
           width: 200%;
           position: absolute;
-          transition: all 0.5s ease;
-          margin-top: 1rem;
-          display: none;
           padding: 1rem 0;
           li {
             display: block;
@@ -56,7 +52,7 @@ nav {
               color: #fff;
             }
             &:hover a {
-              color: $primary-color-white;
+              color: #000;
             }
             &:hover {
               background-color: #fff;
@@ -65,11 +61,161 @@ nav {
         }
       }
     }
-    ul li:hover > ul,
-    ul li ul:hover {
-      visibility: visible;
-      opacity: 1;
-      display: block;
+  }
+}
+.header_change {
+  position: fixed;
+  background-color: rgb(67, 72, 170);
+  width: 100%;
+  z-index: 3;
+  box-shadow: 3px 6px 36px -10px #000000b3;
+  top: -100px;
+  transform: translateY(100px);
+  transition: 0.6s ease-in-out;
+}
+@media screen and (max-width: 991px) {
+  nav {
+    // .navbar-toggler {
+    //   position: relative;
+    //   width: 50px;
+    //   height: 50px;
+    //   display: flex;
+    //   justify-content: center;
+    //   align-items: center;
+    //   overflow: hidden;
+
+    //   background-color: transparent;
+    //   &:focus {
+    //     border: 0;
+    //   }
+
+    //   & span {
+    //     position: absolute;
+    //     width: 20px;
+    //     height: 2.5px;
+    //     background-color: #ffffff;
+    //     border-radius: 4px;
+    //     right: 15px;
+
+    //     &:nth-child(1) {
+    //       transform: translateY(-8px);
+    //       width: 20px;
+    //       left: 15px;
+    //     }
+
+    //     &:nth-child(2) {
+    //       transform: translateY(8px);
+    //       width: 20px;
+    //       left: 15px;
+    //     }
+    //   }
+    // }
+    .collapse {
+      justify-content: flex-end;
+      background-color: transparent;
+      .navbar-nav {
+        .nav-item {
+          list-style: none;
+          display: block;
+          padding: 0;
+          position: relative;
+          text-decoration: none;
+
+          .nav-link {
+            color: #fff;
+            font-size: 0.9rem;
+            font-weight: 500;
+          }
+          ul {
+            background: rgb(49, 65, 202);
+            width: 100%;
+            position: unset;
+            margin-top: 1rem;
+            padding: 1rem 0;
+            li {
+              display: block;
+              line-height: 1rem;
+              padding: 1rem;
+              a {
+                color: #fff;
+              }
+              &:hover a {
+                color: #000;
+              }
+              &:hover {
+                background-color: #fff;
+              }
+            }
+          }
+        }
+      }
+    }
+    .show {
+      background-color: rgb(49, 65, 202);
+    }
+  }
+}
+@media screen and (max-width: 424px) {
+  nav {
+    // border-bottom: 3px solid $primary-text-color;
+    background-color: $primary-background-color;
+    position: relative;
+    z-index: 2;
+
+    .navbar-brand {
+      color: #fff;
+      padding: 0.2rem 1rem;
+      font-size: 1.3rem;
+      font-weight: 900;
+    }
+
+    .collapse {
+      justify-content: flex-end;
+      background-color: transparent;
+      ul {
+        li {
+          list-style: none;
+          display: inline;
+          padding: 0.5rem;
+          position: relative;
+          text-decoration: none;
+
+          a {
+            color: #fff;
+            font-size: 1.1rem;
+            font-weight: 500;
+          }
+          ul {
+            background: rgb(49, 65, 202);
+
+            opacity: 0;
+            width: 200%;
+            position: absolute;
+            margin-top: 1rem;
+            padding: 1rem 0;
+            li {
+              display: block;
+              line-height: 1rem;
+              padding: 1rem;
+              a {
+                color: #fff;
+              }
+              &:hover a {
+                color: #000;
+              }
+              &:hover {
+                background-color: #fff;
+              }
+            }
+          }
+        }
+      }
+      ul li:hover > ul,
+      ul li ul:hover {
+        visibility: visible;
+        opacity: 1;
+        display: block;
+      }
     }
   }
 }
